--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "python.pythonPath": "/Applications/Xcode.app/Contents/Developer/usr/bin/python3"
+  "python.pythonPath": "/Applications/Xcode.app/Contents/Developer/usr/bin/python3",
+  "cSpell.words": [
+    "pytest"
+  ]
 }
